test/testdata/functions/builtin/exit_non_int_error.lox
exit(2.5); // error: expected exit argument (2.5) to be an integer
